--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href=
-    <title>Guiminamflix</title>
+    <title>Projeto Impacto</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>Projeto Impacto</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -19,10 +19,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src=" https://www.canva.com/design/DAGQZW-Szww/K2i1qiH9EitO1_1m9NKfsw/edit?utm_content=DAGQZW-Szww&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"></iframe>
         </div>
     </section>
 
