--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <section class="categoria">
-        <h2>accessory</h2>
+        <h2>accessory:</h2>
         <div class="Bags">
         
            
